# youtube-content-pipeline

./: .env.example  .gitignore  AGENTS.md  API_USAGE_GUIDE.md  CHANNEL_SYNC_GUIDE.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  CONFIGURATION_REFERENCE.md  DOCUMENTATION_UPDATE_SUMMARY.md  GUIDELINES.md  IMPLEMENTATION_REPORT.md  INTEL_ARC_GPU_GUIDE.md  MCP_INTEGRATION_GUIDE.md  PLAN_members_only_tagging.md  PROMETHEUS_GRAFANA_WSL_QUICKSTART.md  PROMETHEUS_WSL_SETUP.md  README.md  RECENT_CHANGES.md  REFACTORING_SUMMARY.md  SERVICES_GUIDE.md  check_errors_tmp.py  check_status.py  config.yaml  config.yaml.example  pipeline_status.py  ports.yaml  pyproject.toml  pyrightconfig.json
.kilocode/: package-lock.json
agent_laboratory/: COOKIE_MANAGER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LLM_REPAIR_SUMMARY.md  README.md  TEST_REPORT.md  YOUTUBE_DOWNLOAD_SOLUTIONS.md  extract_cookies.py
agent_laboratory/framework/: README.md  run_e2e_test.py
docs/: DOWNLOAD_FALLBACK_IMPLEMENTATION.md  INTEL_ARC_A770_CLEAN_IMPLEMENTATION_COMPLETE.md  INTEL_ARC_A770_IMPLEMENTATION_SUMMARY.md  INTEL_ARC_A770_OPTIMIZATION_COMPLETE.md
openvino_intel_test/: AI_AGENT_GUIDE.md  HUMAN_REPORT.md  test_openvino_intel.py
plans/: fix-ytdlp-fallback-plan.md
scripts/: backfill_availability.py  backfill_failures.py  backfill_stale_transcript_failures.py  cdp_cookie_extractor.py  check-monitoring.sh  launch-services.sh  setup_prometheus_wsl.sh  start-api.sh
src/: __init__.py  __main__.py  cli.py  database.py
src/api/: __init__.py  app.py  dependencies.py  main.py  security.py
src/channel/: __init__.py  feed_fetcher.py  models.py  resolver.py  schemas.py  strategies.py  sync.py
src/cli/: __init__.py  __main__.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  http_session.py  logging_config.py  models.py  normalizer.py  schemas.py  utils.py
src/database/: __init__.py  manager.py  models.py  redis.py
src/llm_agents/: __init__.py  base.py  batch_processor.py  factory.py  frame_agent.py  response_utils.py  schema_repair_agent.py  synthesis_agent.py  transcript_agent.py
src/mcp/: __init__.py  config.py  server.py
src/pipeline/: __init__.py  llm_driven.py  transcript.py
src/services/: channel_service.py  transcription_service.py  video_service.py
src/transcription/: __init__.py  failures.py  groq_provider.py  handler.py  local_service_provider.py  whisper_openvino.py  whisper_openvino_intel.py  whisper_provider.py  whisper_transformers.py  whispercpp_provider.py  youtube_api.py  youtube_downloader.py
strategytest/: FEASIBILITY_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  SUMMARY.md  test_all_strategies.py
tests/: conftest.py  test_api_auth.py  test_api_endpoint_stabilization.py  test_api_error_handling.py  test_api_integration.py  test_api_models.py  test_api_rate_limiting.py  test_auth.py  test_channel_resolver.py  test_channel_retry_failed.py  test_channel_service.py  test_config_yaml_isolation.py  test_database_manager.py  test_groq_provider.py  test_local_service_provider.py  test_mcp_server.py  test_openapi_schema.py  test_pipeline.py  test_rate_limiting.py  test_redis.py  test_redis_integration.py  test_transcription_service.py  test_video_service.py  test_youtube_downloader.py
(+43 files in other folders)
